<resources>
    <string name="app_name">SumaApp</string>
    <string name="ejercicio_1">EJERCICIO 1</string>
    <string name="ejercicio_2">EJERCICIO 2</string>
    <string name="integrantes">INTEGRANTES</string>
    <string name="tp_n_1">TP N°1</string>
    <string name="jose_ignacio_gauna">Jose Ignacio Gauna</string>
    <string name="pablo_ernesto_gimenez">Pablo Ernesto Gimenez</string>
    <string name="mariano_benitez_grion">Mariano Benitez Grion</string>
    <string name="alejandro_gazzo">Alejandro Gazzo</string>

    <!-- Nuevas entradas -->
    <string name="suma">Suma</string>
    <string name="primer_numero">Primer número:</string>
    <string name="segundo_numero">Segundo número:</string>
    <string name="calcular">Calcular</string>
    <string name="primer_numero_hint">Primer número</string>
    <string name="segundo_numero_hint">Segundo número</string>
    <string name="calculadora">Calculadora</string>
    <string name="flecha_atras">flecha_atras</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="mas">+</string>
    <string name="cero">0</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="menos">-</string>
    <string name="dividido">/</string>
    <string name="multiplicado">*</string>
    <string name="borrar">BORRAR</string>
    <string name="igual">=</string>
</resources>
